Refactor sequence elements to create list of variable characterisations directly